Replace unmaintained directory-fonts-complete with fixed fork

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"node": ">=18"
 	},
 	"dependencies": {
-		"directory-fonts-complete": "^1.2.0",
+		"@sbsiegel/directory-fonts-complete": "^2.1.0",
 		"google-fonts-complete": "^2.1.1"
 	},
 	"devDependencies": {
